syntax = "proto3"; //指定proto版本

package user; // 默认包名

// 编译命令
// protoc --go-grpc_out=require_unimplemented_servers=false:. --go_out=. ./user.proto
// goctl rpc protoc user.proto --go_out=. --go-grpc_out=. --zrpc_out=.

// 包名 生成的Go代码的包路径
option go_package = "./user";

// 定义服务名
service User {
  // 定义rpc方法
  rpc GetUser(GetUserReq) returns (GetUserResp);

  rpc Create(CreateReq) returns (CreateResp);

  rpc Ping(Request) returns (Response);
}

message Request {}
message Response {}

message GetUserReq {
  // 属性的类型 属性名 = 标识符
  string id = 1;
}

message CreateReq {
  string name = 1;
  string phone = 2;
}

message CreateResp {
  string id = 1;
}

message GetUserResp {
  string id = 1;
  string name = 2;
  string phone = 3;
}